syntax = "proto3";

package com.pythongong.community.user.proto;

import "community.proto";
// Option to generate separate Java files for each message/service
option java_multiple_files = true;

option java_package = "com.pythongong.community.user.proto";

// The user service definition.
service UserService {
  // Registers a new user
  rpc Register(RegisterUserRequest) returns (infras.proto.IntVal);

  rpc Login(LoginUserRequest) returns (infras.proto.LongVal);
  
}

// The request message containing the user's registration details.
message RegisterUserRequest {
  string user_name = 1;
  string user_password = 2;
  string gender = 3;
  string nick_name = 4;
  string avatar = 5;        // Optional, maps to your RegisterUserRequest.avatar()
  string user_profile = 6;  // Optional, maps to your RegisterUserRequest.userProfile()
}

message LoginUserRequest {
  string userName = 1;
  string userPassword = 2;
}

